package com.example.common.uicomponent;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class HiBaseActivity extends AppCompatActivity implements HiBaseActionInterface {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
    }
}