@startuml

title __UICOMPONENT's Class Diagram__\n

  namespace com.example.common {
    namespace uicomponent {
      interface com.example.common.uicomponent.HiBaseActionInterface {
      }
    }
  }
  

  namespace com.example.common {
    namespace uicomponent {
      class com.example.common.uicomponent.HiBaseActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.example.common {
    namespace uicomponent {
      class com.example.common.uicomponent.HiBaseApplication {
          + onCreate()
      }
    }
  }
  

  namespace com.example.common {
    namespace uicomponent {
      abstract class com.example.common.uicomponent.HiBaseFragment {
          # layoutView : View
          {abstract} + getLayoutId()
          + onCreateView()
      }
    }
  }
  

  com.example.common.uicomponent.HiBaseActivity .up.|> com.example.common.uicomponent.HiBaseActionInterface
  com.example.common.uicomponent.HiBaseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.common.uicomponent.HiBaseApplication -up-|> android.app.Application
  com.example.common.uicomponent.HiBaseFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
